<resources>
    <!--General-->
    <string name="app_name">FRO Scouting</string>
    <string name="content_desc">content desc</string>
    <string name="default_text">Empty\nBox</string>
    <string name="default_type">Type Here…</string>
    <string name="default_number">0</string>
    <string name="submit_data">Submit Data?</string>

    <!--Start Page-->
    <string name="main_header">FRO Scouting</string>
    <string name="game_text">Game</string>
    <string name="name">Scouter\'\s\nName:</string>
    <string name="team_num">Team\nNumber:</string>
    <string name="rob_pos">Robot\nPosition:</string>
    <string name="match_num">Match\nNumber:</string>
    <string name="hum_pos">Human\nPlayer\nPosition:</string>
    <string name="start_scouting">Start Scouting</string>

    <!--Auto-->
    <string name="auto_header">Auto</string>
    <string name="auto_leave">Leave Robot\nStarting Zone</string>
    <string name="auto_speaker">Speaker</string>
    <string name="auto_amp">Amp</string>
    <string name="auto_trap">Trap</string>

    <!--Tele Op-->
    <string name="teleop_header">Tele Op</string>
    <string name="tele_nSpeaker">Speaker\nNot Amplified</string>
    <string name="tele_aSpeaker">Speaker\nAmplified</string>
    <string name="tele_amp">Amp</string>
    <string name="tele_trap">Trap</string>
    <string name="tele_ground">Ground\nPickup</string>
    <string name="tele_source">Source\nPickup</string>
    <string name="tele_bonus">Coopertition\nBonus</string>

    <!--Endgame-->
    <string name="endgame_header">End Game</string>
    <string name="eg_pos">End\nPosition</string>
    <string name="eg_climb">Climb\nType</string>
    <string name="eg_buddy">Buddy\nClimb</string>
    <string name="eg_os_left">Spotlight\nOnstage Left</string>
    <string name="eg_os_center">Spotlight\nCenter Stage</string>
    <string name="eg_os_right">Spotlight\nOnstage Right</string>
    <string name="eg_throws_made">Throws\nMade</string>
    <string name="eg_throws_miss">Throws\nMissed</string>

    <!--Notes-->
    <string name="notes_header">Notes</string>
    <string name="defends">Defended</string>
    <string name="defended">Defended By</string>
    <string name="robot">This Robot</string>
    <string name="robot_break">Did The\nRobot Break</string>
    <string name="robot_tip">Was The\nRobot Tipped</string>
    <string name="robot_penalties">Were There\nAny Penalties</string>

    <!--Submit Screen-->
    <string name="home_text">Home Page</string>
    <string name="submit_text">Submit</string>

    <!--Help Screen-->
    <string name="help_header_scout">How To Scout</string>
    <string name="help_header_tidbit">Helpful Tidbits</string>
    <string name="help_header_visual">Visual Cues</string>
    <string name="help_header_penalties">Frequent Penalties</string>
    <string name="help_header_terms">Terminology</string>

    <string name="click_to_close">Click Anywhere To Close</string>
    <string name="default_page">Pg. 1</string>


    <!-- Long Strings -->
    <string name="help_screen_scout">
\t 1. Check the match number and the position assigned to you on the scouting schedule. \n
\t 2. Enter your name, the robot number, and the robot position. \n
\t 3. Start in the Auto section. \n
\t 4. Watch your assigned robot, filling out the fields associated with your robot’s actions. \n
\t 5. When the first bell rings, go to the Tele-Op section. \n
\t 6. Repeat step 4 \n
\t 7. When the game is over, go to the Endgame section and fill out the boxes. \n
\t 8. Go to the Notes section, and input any notes.</string>

    <string name="help_screen_tidbits">
\t \u25CF Stage Left/Right is determined by the driver’s POV\n
\t \u25CF You can find the human player position by looking at the amp player’s shirt color, and inferring their team.\n
\t \u25CF The point of the defends/ defended buttons are to see if the robot\'s performance impaired by defense.\n
\t \u25CF Examples of things to put in the notes box: If the robot is a skateboard, a defense bot, or their auto fails.\n
\t \u25CF Climb Type is how many robots are on the chain the scouted robot is on.</string>

    <string name="help_screen_visual">
\t \u25CF If the speaker is amplified, a 10 second countdown will appear on the scoreboard.\n
\t \u25CF If coopertition is enabled, a handshake icon will be on the scoreboard.</string>

    <string name="help_screen_penalties">
\t \u25CF If a robot does a penalty, the ref closest to them will wave a flag the robot\'s team color.\n
\t \u25CF A robot can be in control of only ONE NOTE at a time.\n
\t \u25CF If a robot is touching the post of the stage closest to their own speaker, and an enemy robot touches them, that is a penalty on the enemy.\n
\t \u25CF If a robot is in their amp or source zone, and an enemy robot touches them, that is a penalty on the enemy. \n
\t \u25CF If a robot purposefully ejects a note outside of the field. \n
\t \u25CF If a high note leaves the field.</string>
    
    <string name="help_screen_terms">
\t \u25CF Spotlight = Human player scored a note on a microphone. \n
\t \u25CF Microphone = The posts on top of the stage. \n
\t \u25CF Onstage = The robot has climbed and is not touching the ground. \n
\t \u25CF Coopertition Bonus = If both teams amp human players hit their yellow buttons in the first 45 seconds.</string>

    <!-- Arrays -->

    <string-array name="positions">
        <item>Dropdown</item>
        <item>Left</item>
        <item>Middle</item>
        <item>Right</item>
    </string-array>

    <string-array name="end_pos">
        <item>Dropdown</item>
        <item>Parked</item>
        <item>Onstage Left</item>
        <item>Center Stage</item>
        <item>Onstage Right</item>
    </string-array>

    <string-array name="climb_type">
        <item>Dropdown</item>
        <item>Single</item>
        <item>Double</item>
        <item>Triple</item>
    </string-array>

    <string-array name="hum_pos">
        <item>Dropdown</item>
        <item>Source</item>
        <item>Amp</item>
    </string-array>

    <string-array name="team_numbers">
        <item>87</item>
        <item>103</item>
        <item>203</item>
        <item>272</item>
        <item>316</item>
        <item>321</item>
        <item>427</item>
        <item>484</item>
        <item>486</item>
        <item>1640</item>
        <item>1647</item>
        <item>1712</item>
        <item>2016</item>
        <item>2180</item>
        <item>2554</item>
        <item>2559</item>
        <item>2720</item>
        <item>2722</item>
        <item>3314</item>
        <item>4372</item>
        <item>4575</item>
        <item>4750</item>
        <item>5401</item>
        <item>5490</item>
        <item>5666</item>
        <item>5895</item>
        <item>6226</item>
        <item>6921</item>
        <item>7414</item>
        <item>7587</item>
        <item>8714</item>
        <item>9015</item>
        <item>9027</item>
        <item>9100</item>
        <item>9416</item>

    </string-array>

</resources>