<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/behind"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/content_desc"/>


    <LinearLayout
        android:id="@+id/mySnackbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:paddingBottom="5dp"
        android:background="@drawable/box_background"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:weightSum="12.5">

        <LinearLayout
            android:id="@+id/page1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="11"
            android:weightSum="11"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/help_header_scout"
                style="@style/header_text_dark"
                android:layout_margin="5dp"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/help_screen_scout"
                style="@style/help_box_text"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="4"
                />
            <ImageView
                android:layout_width="267dp"
                android:layout_height="5dp"
                android:background="@drawable/dotted_line"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/content_desc" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/help_header_tidbit"
                style="@style/header_text_dark"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:layout_weight="1"/>

            <TextView
                style="@style/help_box_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="3"
                android:text="@string/help_screen_tidbits" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/help_reference_img"
                android:layout_weight="2"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/page2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="11"
            android:weightSum="11"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/help_header_terms"
                style="@style/header_text_dark"
                android:layout_margin="5dp"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/help_screen_terms"
                style="@style/help_box_text"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="2.4"
                />
            <ImageView
                android:layout_width="267dp"
                android:layout_height="5dp"
                android:background="@drawable/dotted_line"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/content_desc" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/help_header_visual"
                style="@style/header_text_dark"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:layout_weight="1"/>

            <TextView
                style="@style/help_box_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1.5"
                android:text="@string/help_screen_visual" />
            <ImageView
                android:layout_width="267dp"
                android:layout_height="5dp"
                android:background="@drawable/dotted_line"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/content_desc" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/help_header_penalties"
                style="@style/header_text_dark"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:layout_weight="1"/>

            <TextView
                style="@style/help_box_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="4.1"
                android:text="@string/help_screen_penalties" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp">
            <ImageButton
                android:contentDescription="@string/content_desc"
                android:id="@+id/leftArrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:paddingStart="30dp"
                style="@style/src_buttons"
                android:visibility="invisible"
                android:src="@drawable/arrow_left_icon"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/pageNum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/default_page"
                style="@style/header_text_dark"
                android:layout_weight="1"
                android:padding="2dp"
                android:background="@drawable/box_background"/>
            <ImageButton
                android:contentDescription="@string/content_desc"
                android:id="@+id/rightArrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:paddingEnd="30dp"
                style="@style/src_buttons"
                android:src="@drawable/arrow_right_icon"
                android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:gravity="bottom|center_horizontal"
            android:text="@string/click_to_close"
            style="@style/header_text_dark" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>