<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/nightBlue"
    android:weightSum="4">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/notes_header"
        style="@style/header_text_light"
        android:layout_weight="1"/>
    <ImageView
        android:layout_width="267dp"
        android:layout_height="5dp"
        android:background="@drawable/dotted_line_light"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/content_desc" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginTop="14dp"
        android:layout_weight="1"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4"
            android:background="@drawable/box_background"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                style="@style/notes_box_text_top"
                android:text="@string/defends"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                style="@style/notes_box_text_bottom"
                android:text="@string/robot"
                android:layout_weight="1"/>
            <AutoCompleteTextView
                android:id="@+id/defendsSpinner"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:hint="@string/default_type"
                android:background="@drawable/dropdown_background"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:inputType="number" />
        </LinearLayout>
        <View
            android:layout_width="30dp"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/box_background"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                style="@style/notes_box_text_top"
                android:text="@string/defended"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                style="@style/notes_box_text_bottom"
                android:text="@string/robot"
                android:layout_weight="1"/>
            <AutoCompleteTextView
                android:id="@+id/defendedSpinner"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:hint="@string/default_type"
                android:background="@drawable/dropdown_background"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:inputType="number" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/long_box_white"
        android:layout_weight="1"
        android:weightSum="3">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/long_box_text"
                android:text="@string/robot_break"/>
            <com.google.android.material.materialswitch.MaterialSwitch
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/mid_long_box_grey"
            android:orientation="vertical"
            android:weightSum="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/long_box_text"
                android:text="@string/robot_tip"/>
            <com.google.android.material.materialswitch.MaterialSwitch
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/long_box_text"
                android:text="@string/robot_penalties"/>
            <com.google.android.material.materialswitch.MaterialSwitch
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:background="@drawable/box_background"
        style="@style/type_box_text"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        />

</LinearLayout>