<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/froBlue">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_header"
        style="@style/header_text_light"/>
    <ImageView
        android:layout_width="300dp"
        android:layout_height="5dp"
        android:background="@drawable/dotted_line_light"
        android:contentDescription="@string/content_desc"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_text"
        style="@style/header_text_light"/>
    <ImageView
        android:layout_width="250dp"
        android:layout_height="5dp"
        android:background="@drawable/dotted_line_light"
        android:contentDescription="@string/content_desc"
        android:layout_gravity="center_horizontal"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_height="124dp"
        android:layout_marginTop="25dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="2"
            android:backgroundTint="@color/darkBlue"
            android:text="@string/temp_string"
            android:textSize="50sp"
            android:fontFamily="@font/helvetica"
            android:textColor="@color/white"/>

    </LinearLayout>


</LinearLayout>