<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/darkBlue"
    android:weightSum="4">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/endgame_header"
        style="@style/header_text_light"
        android:layout_weight="1"/>
    <ImageView
        android:layout_width="267dp"
        android:layout_height="5dp"
        android:background="@drawable/dotted_line_light"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/content_desc" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:background="@drawable/box_background"
        style="@style/large_box_text"
        android:text="@string/default_text"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="14dp"
        android:layout_weight="1"
        />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:background="@drawable/box_background"
        style="@style/large_box_text"
        android:text="@string/default_text"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="14dp"
        android:layout_weight="1"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:layout_weight="1"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:backgroundTint="@color/white"
        app:itemTextColor="@color/froBlue"
        app:menu="@menu/bottom_nav_menu"/>

</LinearLayout>