<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/lightBlue">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_header"
        style="@style/header_text_dark"/>
    <ImageView
        android:layout_width="267dp"
        android:layout_height="5dp"
        android:background="@drawable/dotted_line_dark"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/content_desc"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:weightSum="2"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/wide_box"
            style="@style/box_text"
            android:text="@string/default_text"
            />
        <View
            android:layout_width="30dp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/wide_box"
            android:layout_weight="1"
            style="@style/box_text"
            android:text="@string/default_text"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/long_box"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/long_box_text"
            android:text="@string/default_text"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/mid_long_box"
            android:layout_weight="1"
            style="@style/long_box_text"
            android:text="@string/default_text"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/long_box_text"
            android:text="@string/default_text"/>
    </LinearLayout>



</LinearLayout>